log
Sun, May 18, 2025  1:59:44 AM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Sun, May 18, 2025  2:05:43 AM: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:55:15: error: unused variable 'l' [-Werror=unused-variable]
     int i,j,k,l;
               ^
cc1.exe: all warnings being treated as errors
1c4f23a
Sun, May 18, 2025  2:06:54 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
ca6b3b5
